k8s/base/test-service-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-service
spec:
  selector:
    matchLabels:
      app: test-service
  replicas: 1
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: "test-service"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
