k8s/base/_infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
spec:
  selector:
    matchLabels:
      app: sqlserver
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: "mcr.microsoft.com/mssql/server"
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: dbdata
          mountPath: /var/opt/sqlserver
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis"
          ports:
            - containerPort: 6379
---
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
