k8s/base/angular-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-ui
spec:
  selector:
    matchLabels:
      app: angular-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: angular-ui
    spec:
      containers:
        - name: angular-ui
          image: "angular-ui"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-ui
spec:
  selector:
    app: angular-ui
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
