k8s/base/api-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth-service
spec:
  selector:
    matchLabels:
      app: api-auth-service
  replicas: 1
  template:
    metadata:
      labels:
        app: api-auth-service
    spec:
      containers:
        - name: api-auth-service
          image: "api-auth-service"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-auth-service
spec:
  selector:
    app: api-auth-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
