k8s/base/api-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
spec:
  selector:
    matchLabels:
      app: api-gateway-service
  replicas: 1
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: "api-gateway-service"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
