k8s/base/app-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-angular
spec:
  selector:
    matchLabels:
      app: app-angular
  replicas: 1
  template:
    metadata:
      labels:
        app: app-angular
    spec:
      containers:
        - name: app-angular
          image: "app-angular"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-angular
spec:
  selector:
    app: app-angular
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
