k8s/base/app-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-react
spec:
  selector:
    matchLabels:
      app: app-react
  replicas: 1
  template:
    metadata:
      labels:
        app: app-react
    spec:
      containers:
        - name: app-react
          image: "app-react"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-react
spec:
  selector:
    app: app-react
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
