k8s/base/identity-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: identity-server
spec:
  selector:
    app: identity-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
