k8s/base/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
spec:
  selector:
    matchLabels:
      app: movie-service
  replicas: 1
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - name: movie-service
          image: "movie-service"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
