k8s/base/test-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
spec:
  selector:
    matchLabels:
      app: test-service
  replicas: 1
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: "test-service"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
