k8s/base/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - localhost
      secretName: tls-certs
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-angular
              port:
                name: http
        - path: /react
          pathType: Prefix
          backend:
            service:
              name: app-react
              port:
                name: http
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: api-auth-service
              port:
                name: http
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                name: http
