k8s/base/gateway-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32100
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-node-port
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  defaultBackend:
    service:
      name: gateway
      port:
        number: 80
